--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon src/server/server.js"
+    "start": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,8 @@
     "tape": "^4.9.1"
   },
   "dependencies": {
+    "cookie": "^0.3.1",
+    "jsonwebtoken": "^8.3.0",
     "pg": "^7.4.3"
   }
 }
