--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "tape": "^4.9.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "pg": "^7.4.3"
   }
 }
