--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tape": "^4.9.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie": "^0.3.1",
     "jsonwebtoken": "^8.3.0",
     "pg": "^7.4.3"
