--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "cookie": "^0.3.1",
     "jsonwebtoken": "^8.3.0",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "sweetalert": "^2.1.0"
   }
 }
